# Weak_and_Self-supervision

./: .gitignore  GETTING_STARTED.md  INSTALL.md  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
assests/: README.md
configs/: README.md
datasets/: README.md
datasets/Target domain1/json/: img1_0001.json  img1_0002.json  img1_0003.json  img1_0004.json  img1_0005.json
datasets/Target domain2/json/: 20220111101025_frame_541.json  20220111101025_frame_542.json  20220111101025_frame_543.json  20220111101025_frame_544.json  20220111101025_frame_545.json
datasets/Target domain3/json/: D01_20231026125004.mp4_000431.json  D01_20231026125004.mp4_000432.json  D01_20231026125004.mp4_000433.json  D01_20231026125004.mp4_000434.json  D01_20231026125004.mp4_000435.json
datasets/Target domain4/json/: 1701396009.1843407MAH00100.MP4_000001.json  (+4 more)
demo/: README.md
docs/: README.md
projects/: README.md
segment-anything/: SAM_final2.py  generate_sam_masks.py
segment-anything/preparing_data/: Main.py  Main_binary_to_json.py  README_generate_masks.md  Step4 combine json.py  step1_json_to_detection.py  step2_detection_to_voc.py  step3_binary_to_json.py  step4_combine_json.py  step5_json_to_yolo.py
tools/: README.md
yolo-V8/: general_json2yolo.py  step5_json_to_yolo.py
yolo-V8/baseline/: README_baseline.md  baseline_config.yaml  baseline_train.py
yolo-V8/self-supervision/: README_self.md  self_config.yaml  self_data.yaml  self_infrence.py  self_train.py  yolo_to_yolo.py
yolo-V8/weak-supervision/: README_weak.md  weak_config.yaml
(+28 files in other folders)
