[metadata]
name = weak-self-supervision
version = 0.1.0
description = Weak and Self-Supervision Model using YOLOv8 and SAM
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
packages = find:

[flake8]
max-line-length = 120
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    venv
ignore = E203, E266, E501, W503

[isort]
profile = black
line_length = 120
skip = .venv,venv,build,dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*